force-app/main/default/objects/Seedforce_Recommendation_Rule__c/Seedforce_Recommendation_Rule__c.object-meta.xml
<CustomObject>
    <label>Seedforce Recommendation Rule</label><pluralLabel>Seedforce Recommendation Rules</pluralLabel>
    <nameField><label>Rule Name</label><type>Text</type></nameField>
<sharingModel>ReadWrite</sharingModel>
</CustomObject>