force-app/main/default/objects/Seedforce_Recommendation_Rule__c/fields/Field_Name_Pattern__c.field-meta.xml
<CustomField><fullName>Field_Name_Pattern__c</fullName><label
    >Field Name Pattern</label><length>255</length><type>Text</type></CustomField>