force-app/main/default/objects/Seedforce_Recommendation_Rule__c/fields/Field_Type__c.field-meta.xml
<CustomField><fullName>Field_Type__c</fullName><label
    >Field Type</label><length>40</length><required>true</required><type>Text</type></CustomField>