force-app/main/default/objects/Seedforce_Recommendation_Rule__c/fields/Generator_Key__c.field-meta.xml
<CustomField><fullName>Generator_Key__c</fullName><label
    >Generator Key</label><length>80</length><required>true</required><type>Text</type></CustomField>