force-app/main/default/objects/Seedforce_Recommendation_Rule__c/fields/Maximum_Length__c.field-meta.xml
<CustomField><fullName>Maximum_Length__c</fullName><label
    >Maximum Length</label><precision>6</precision><scale>0</scale><type>Number</type></CustomField>