force-app/main/default/objects/Seedforce_Recommendation_Rule__c/fields/Priority__c.field-meta.xml
<CustomField><fullName>Priority__c</fullName><label
    >Priority</label><precision>4</precision><scale>0</scale><type>Number</type></CustomField>